--- a/PilotCenterTSZ/Properties/Resources.resx
+++ b/PilotCenterTSZ/Properties/Resources.resx
@@ -208,4 +208,13 @@
   <data name="button_ok" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\button_ok.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="lpma" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lpma.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="lxgb" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lxgb.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="rvsmetops" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\rvsmetops.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
