--- a/PilotCenterTSZ/Properties/Resources.resx
+++ b/PilotCenterTSZ/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="student" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\student.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="B767" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\B767.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="captain" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\captain.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -130,14 +133,14 @@
   <data name="B77L" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\B77L.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="captaininstructor" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\captaininstructor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="banner" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\banner.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="MD11" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MD11.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="banner" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\banner.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="lxgb" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lxgb.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="B747" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\B747.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -145,14 +148,11 @@
   <data name="A343" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\A343.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="rvsmetops" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\rvsmetops.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="secondofficer" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\secondofficer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="JS41" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\JS41.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="refreshImg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\refreshImg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="button_ok" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\button_ok.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -160,17 +160,17 @@
   <data name="A332" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\A332.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="seniorcaptain" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\seniorcaptain.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="lg_TSZ" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lg_TSZ.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="seniorinstructor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\seniorinstructor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="CONC" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CONC.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="AT72" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\AT72.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="DH8D" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\DH8D.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="A32F" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\A32F.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -184,8 +184,8 @@
   <data name="B190" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\B190.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="flightinstructor" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\flightinstructor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="rvsmetops" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\rvsmetops.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="B738" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\B738.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -196,28 +196,31 @@
   <data name="seniorstudent" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\seniorstudent.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="B767" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\B767.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="DH8D" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DH8D.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="secondofficer" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\secondofficer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="lpma" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lpma.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="seniorinstructor" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\seniorinstructor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="seniorcaptain" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\seniorcaptain.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="lg_TSZ" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\lg_TSZ.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="2000px-Oxygen480-actions-system-shutdown.svg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\2000px-Oxygen480-actions-system-shutdown.svg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="refreshImg" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\refreshImg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="captaininstructor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\captaininstructor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="flightinstructor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\flightinstructor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="firstofficer" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\firstofficer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="lxgb" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\lxgb.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="2000px-Oxygen480-actions-system-shutdown.svg" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\2000px-Oxygen480-actions-system-shutdown.svg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Minimize_Box_Blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Minimize_Box_Blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
